Added some partials for the design scaffolding.

--- a/css/app.less
+++ b/css/app.less
@@ -4,4 +4,9 @@
 
 /* Partial LESS */
 @import "../partial/main/main.less";
+@import "../partial/header/header.less";
+@import "../partial/footer/footer.less";
+@import "../partial/controlpanel/controlpanel.less";
+@import "../partial/photoGrid/photoGrid.less";
+@import "../partial/controlPanel/controlPanel.less";
 /* Add Partial LESS Above */
