--- a/partial/controlPanel/controlPanel.less
+++ b/partial/controlPanel/controlPanel.less
@@ -8,7 +8,10 @@ div[ng-controller="ControlPanelCtrl"] {
 
   div.authentication {
     border-right-width: 1px;
-    border-right-color: #0066bb;
+  }
+
+  .angular-google-map-container {
+    height: 200px;
   }
 
 }
