--- a/partial/controlPanel/controlPanel.less
+++ b/partial/controlPanel/controlPanel.less
@@ -1,10 +1,16 @@
 div[ng-controller="ControlPanelCtrl"] {
 
-  position: absolute;
-  left: 0px;
-  top: 50px;
-  bottom: 50px;
-  width: 300px;
+  div.controlpanel-content {
+
+    position: absolute;
+    top: 50px;
+    bottom: 50px;
+    left: 0px;
+    width: 300px;
+
+    border-right: 1px #000000 solid;
+
+  }
 
   div.authentication {
     border-right-width: 1px;
