--- a/partial/header/header.html
+++ b/partial/header/header.html
@@ -1,5 +1,7 @@
 <div ng-controller="HeaderCtrl">
-  <span class="heading">
-    Instagrannar
-  </span>
+  <div class="heading-content">
+    <span class="heading">
+      Instagrannar
+    </span>
+  </div>
 </div>
