--- a/partial/header/header.less
+++ b/partial/header/header.less
@@ -1,15 +1,22 @@
 div[ng-controller="HeaderCtrl"] {
 
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  height: 50px;
-  width: 100%;
+  div.heading-content {
+    left: 0px;
+    top: 0px;
+    height: 50px;
+    width: 100%;
+
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px #000000 solid;
+    border-left: 0;
+  }
 
   span.heading {
     float: right;
     margin-right: 64px;
-    font-size: 40px;
+    font-size: 42px;
+    font-weight: bold;
   }
 
 }
