--- a/partial/main/main.less
+++ b/partial/main/main.less
@@ -1,3 +1,21 @@
-body {
+* {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+div[ng-controller="MainCtrl"] {
+
+  div.content {
+    position: absolute;
+
+    width: 1000px;
+    height: 600px;
+
+    top: 32px;
+    left: 50%;
+
+    margin: 0 0 0 -500px;
+
+    border: 1px #000000 solid;
+  }
+
 }
