Several minor design fixes. Fixed the photo grid layout and look.

--- a/partial/footer/footer.less
+++ b/partial/footer/footer.less
@@ -10,7 +10,9 @@ div[ng-controller="FooterCtrl"] {
 
     border-top: 1px #000000 solid;
 
-    padding-left: 50px;
+    p {
+      margin-left: 50px;
+    }
 
   }
 
