--- a/partial/photoGrid/photoGrid.less
+++ b/partial/photoGrid/photoGrid.less
@@ -6,6 +6,25 @@ div[ng-controller="PhotoGridCtrl"] {
     top: 50px;
     bottom: 50px;
     right: 0px;
+
+    width: 700px;
+
+    overflow: scroll;
+
+    padding-left: 6px;
+  }
+
+  span.photo {
+    float: left;
+    margin: 10px;
+
+    p {
+      font-size: 10px;
+    }
+
+    img {
+      border: 1px #acacac solid;
+    }
   }
 
 }
