--- a/css/app.less
+++ b/css/app.less
@@ -1,5 +1,7 @@
 /* Directive LESS */
 @import "../directive/latest/latest.less";
+@import "../directive/photo/photo.less";
+@import "../directive/lightbox/lightbox.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
