Added grunt stuff to package.json (why were they not already there?). Added a range circle to the map and changed some of the map options. Included geolocation but it's not tested yet.

--- a/partial/controlPanel/controlPanel.html
+++ b/partial/controlPanel/controlPanel.html
@@ -17,7 +17,10 @@
         Area
       </p>
 
-      <google-map center="map.center" draggable="true" zoom="map.zoom"></google-map>
+      <google-map center="map.center" draggable="true" zoom="map.zoom" options="mapOptions">
+        <circle center="map.center" radius="place.dst" visible="true" stroke="circleStroke">
+        </circle>
+      </google-map>
 
       <br><br>
       Distance: {{place.dst}} m
