Inserted the Load button into the map as a custom control. Added the tilesloaded event to the map object so we can track changes made to the map by the user (zoom, pan).

--- a/css/app.less
+++ b/css/app.less
@@ -11,4 +11,5 @@
 @import "../partial/controlpanel/controlpanel.less";
 @import "../partial/photoGrid/photoGrid.less";
 @import "../partial/controlPanel/controlPanel.less";
+@import "../partial/pictureLoader/pictureLoader.less";
 /* Add Partial LESS Above */
