--- a/partial/controlPanel/controlPanel.html
+++ b/partial/controlPanel/controlPanel.html
@@ -13,19 +13,22 @@
     </div>
 
     <div class="area">
+
       <p>
         Area
       </p>
 
-      <google-map center="map.center" draggable="true" zoom="map.zoom" options="mapOptions">
-        <circle center="map.center" radius="place.dst" visible="true" stroke="circleStroke">
-        </circle>
+      <google-map center="map.center" draggable="true" zoom="map.zoom" options="mapOptions" events="map.events">
+        <script type="text/ng-template" id="control.tpl.html">
+          <button data-ng-click="load(map.zoom)">Load</button>
+        </script>
+        <map-control template='control.tpl.html' position="bottom-center" controller="PictureLoaderCtrl"></map-control>
+        <circle center="map.center" radius="place.dst" visible="true" stroke="circleStroke"> </circle>
       </google-map>
 
       <br><br>
-      Distance: {{place.dst}} m
-      <br><br>
-      <input type="button" value="Set" data-ng-click="load()" />
+      Radius: {{place.dst}} m
+
     </div>
 
   </div>
