Added bootstrap and font-awesome, started implementing the Zolio theme. Restructured the partials a bit.

--- a/partial/footer/footer.html
+++ b/partial/footer/footer.html
@@ -1,9 +1,32 @@
 <div ng-controller="FooterCtrl">
 
-  <div class="footer-content">
-    <p>
-      footer...
-    </p>
-  </div>
+  <footer class="content-info" role="contentinfo">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="copyright">Instagrannar<br />
+            Copyright &copy;2014
+          </div>
+        </div>
+        <section class="widget col-sm-3 text-2 widget_text">
+          <h3 class="widget-title">Meow?</h3>
+          <div class="textwidget">
+            <a href="#">Meow meow</a>
+          </div>
+        </section>
+        <section class="widget col-sm-3 text-2 widget_text">
+          <h3 class="widget-title">Meow?</h3>
+          <div class="textwidget">
+            <a href="#">Meow meow</a>
+          </div>
+        </section><section class="widget col-sm-3 text-2 widget_text">
+        <h3 class="widget-title">Meow?</h3>
+        <div class="textwidget">
+          <a href="#">Meow meow</a>
+        </div>
+      </section>
+      </div>
+    </div>
+  </footer>
 
 </div>
