Cleaned out unused partials/directives. Cleaned out console.log calls. Refactored some stuff. Made sure the google js is actually loaded from google and not included locally. Made sure font files are included when building and deploying.

--- a/partial/footer/footer.html
+++ b/partial/footer/footer.html
@@ -4,27 +4,35 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-3">
-          <div class="copyright">Instagrannar<br />
+          <div class="copyright">Instagrannar<br/>
             Copyright &copy;2014
           </div>
         </div>
+
         <section class="widget col-sm-3 text-2 widget_text">
-          <h3 class="widget-title">Meow?</h3>
+          <h3 class="widget-title">Footer section</h3>
+
           <div class="textwidget">
-            <a href="#">Meow meow</a>
+            <a href="#">Link</a>
           </div>
         </section>
+
         <section class="widget col-sm-3 text-2 widget_text">
-          <h3 class="widget-title">Meow?</h3>
+          <h3 class="widget-title">Footer section</h3>
+
           <div class="textwidget">
-            <a href="#">Meow meow</a>
+            <a href="#">Link</a>
           </div>
-        </section><section class="widget col-sm-3 text-2 widget_text">
-        <h3 class="widget-title">Meow?</h3>
-        <div class="textwidget">
-          <a href="#">Meow meow</a>
-        </div>
-      </section>
+        </section>
+
+        <section class="widget col-sm-3 text-2 widget_text">
+          <h3 class="widget-title">Footer section</h3>
+
+          <div class="textwidget">
+            <a href="#">Link</a>
+          </div>
+        </section>
+
       </div>
     </div>
   </footer>
