Moved sidebar into a partial of its own. Restructured most partials a bit.

--- a/css/app.less
+++ b/css/app.less
@@ -65,4 +65,5 @@
 @import "../partial/photoGrid/photoGrid.less";
 @import "../partial/pictureLoader/pictureLoader.less";
 @import "../partial/map/map.less";
+@import "../partial/sideBar/sideBar.less";
 /* Add Partial LESS Above */
