--- a/partial/main/main.html
+++ b/partial/main/main.html
@@ -1,9 +1,17 @@
-<div ng-controller="MainCtrl">
 
-    <div ng-controller="MapCtrl" ng-include src="'partial/map/map.html'"></div>
+  <div class="wrap" role="document">
+    <div class="container">
+      <div class="content">
+        
+        <main class="main" role="main">
 
-    <div ng-controller="PhotoGridCtrl" ng-include src="'partial/photoGrid/photoGrid.html'"></div>
+          <div ng-controller="PhotoGridCtrl" ng-include src="'partial/photoGrid/photoGrid.html'"></div>
+          
+        </main>
 
-    <div ng-controller="FooterCtrl" ng-include src="'partial/footer/footer.html'"></div>
-
-</div>
+        <div class="overlay"></div>
+        <div ng-controller="SideBarCtrl" ng-include src="'partial/sideBar/sideBar.html'"></div>
+        
+      </div>
+    </div>
+  </div>
