Cleaned up some code, made some things messier. Added a content service where we will gather all the UI strings so the app is easy to localize in different languages and so that it is easy to maintain the texts.

--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -2,6 +2,9 @@
   <p>
     Se vad som händer runtom dig! Använd kartan för att hitta de senaste bilderna på Instagram från just den platsen.
   </p>
+  <p ng-show="locationLookupFailure">
+    {{localizedContent.read('locationLookupErrorMessage')}}
+  </p>
 </blockquote>
 
 <blockquote data-ng-show="!!grams.data && grams.data.length === 0">
