--- a/partial/map/map.html
+++ b/partial/map/map.html
@@ -13,7 +13,7 @@
     <google-map center="map.center" draggable="true" zoom="map.zoom" options="mapOptions" events="map.events">
       <script type="text/ng-template" id="control.tpl.html">
         <span class="picture-loader">
-          <button data-ng-click="load(map.zoom)" ng-disabled="buttonDisabled">Ladda bilder</button>
+          <button data-ng-click="load(map.zoom)" ng-disabled="buttonDisabled">{{localizedContent.read('getPictures')}}</button>
         </span>
       </script>
       <map-control template='control.tpl.html' position="bottom-center" controller="PictureLoaderCtrl"></map-control>
