Added search feature. resolves #35

--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -1,3 +1,6 @@
+<google-places location=location></google-places>
+<button ng-click="doSearch()" class="btn btn-large btn-primary">Search</button>
+
 <blockquote data-ng-hide="!!grams.data">
   <p>
     Se vad som händer runtom dig! Använd kartan för att hitta de senaste bilderna på Instagram från just den platsen.
