--- a/css/app.less
+++ b/css/app.less
@@ -57,6 +57,7 @@
 
 /* Directive LESS */
 @import "../directive/photo/photo.less";
+@import "../directive/googlePlaces/googlePlaces.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
