--- a/partial/map/map.html
+++ b/partial/map/map.html
@@ -11,6 +11,7 @@
     </div>
 
     <google-map center="map.center" draggable="true" zoom="map.zoom" options="mapOptions" events="map.events">
+      <script type="text/ng-template" 
       <script type="text/ng-template" id="control.tpl.html">
         <span class="picture-loader">
           <button data-ng-click="load(map.zoom)" ng-disabled="buttonDisabled">{{localizedContent.read('getPictures')}}</button>
