Stability fixes for the map search feature.

--- a/directive/googlePlaces/googlePlaces.less
+++ b/directive/googlePlaces/googlePlaces.less
@@ -1,5 +1,13 @@
 div#google_places_search {
+
   input {
-    width: 80%;
+    width: 100%;
+    margin: 1px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 4px;
   }
+
+  margin-bottom: 10px;
+
 }
