--- a/directive/photo/photo.less
+++ b/directive/photo/photo.less
@@ -1,5 +1,5 @@
 div.photo-modal {
-  z-index: 1000;
+  z-index: 9999;
   position: fixed;
   left: 0px;
   top: 0px;
@@ -7,6 +7,7 @@ div.photo-modal {
   height: 100%;
   background-color:rgba(0, 0, 0, 0.7);
   color: #efefef;
+  text-align: center;
 }
 
 article {
