Working on z-index problem.

--- a/directive/photo/photo.less
+++ b/directive/photo/photo.less
@@ -8,7 +8,10 @@ div.photo-modal {
   background-color:rgba(0, 0, 0, 0.7);
   color: #efefef;
   text-align: center;
+  overflow-y: scroll;
 }
+
+.isotope-item:hover { z-index: 10; }
 
 article {
   z-index: 5;
