Added photoView controller.

--- a/css/app.less
+++ b/css/app.less
@@ -67,4 +67,5 @@
 @import "../partial/pictureLoader/pictureLoader.less";
 @import "../partial/map/map.less";
 @import "../partial/sideBar/sideBar.less";
+@import "../partial/photoView/photoView.less";
 /* Add Partial LESS Above */
