--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -1,15 +1,24 @@
-<blockquote data-ng-hide="!!grams.data">
+<blockquote data-ng-hide="!!grams.data || error">
   <p>
-    Se vad som händer runtom dig! Använd kartan för att hitta de senaste bilderna på Instagram från just den platsen.
+    {{localizedContent.read('introParagraph')}}
   </p>
+  <!--
   <p ng-show="locationLookupFailure">
     {{localizedContent.read('locationLookupErrorMessage')}}
+  </p>
+  -->
+</blockquote>
+
+<blockquote data-ng-show="error">
+  <p class="error">
+    {{localizedContent.read('generalErrorIntro')}}<br/>
+    <strong>{{localizedContent.read('description')}}:</strong> {{errorDescription}}
   </p>
 </blockquote>
 
 <blockquote data-ng-show="!!grams.data && grams.data.length === 0">
   <p>
-    Hittade inga bilder! Prova att zooma ut eller flytta kartan till ett annat område.
+    {{localizedContent.read('noPicturesFound')}}
   </p>
 </blockquote>
 
