--- a/partial/photoView/photoView.html
+++ b/partial/photoView/photoView.html
@@ -1,7 +1,7 @@
 <div>
-	<p>
+	<h1>
 		<a data-ng-click="close()">Tillbaka</a>
-	</p>
+	</h1>
 	<h2>
     {{instagram.caption.text}}
   </h2>
@@ -10,7 +10,7 @@
   </h3>
   <div>
     <a target="_blank" href="{{instagram.link}}">
-      <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}"/>
+      <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}" width="640" height="640"/>
     </a>
   </div>
   <!-- here for future reference
