Added annonsering partial.

--- a/css/app.less
+++ b/css/app.less
@@ -68,4 +68,5 @@
 @import "../partial/map/map.less";
 @import "../partial/sideBar/sideBar.less";
 @import "../partial/photoView/photoView.less";
+@import "../partial/annonsering/annonsering.less";
 /* Add Partial LESS Above */
