Scaffolding for annonsering page.

--- a/partial/annonsering/annonsering.html
+++ b/partial/annonsering/annonsering.html
@@ -1,3 +1,12 @@
 <div ng-controller="AnnonseringCtrl">
-  todo: content
+
+  <div ng-controller="MapCtrl" ng-include src="'partial/map/map.html'"></div>
+
+  <blockquote>
+    <h1>Annonsering</h1>
+    <p>Text...</p>
+  </blockquote>
+  
+  <div ng-controller="FooterCtrl" ng-include src="'partial/footer/footer.html'"></div>
+
 </div>
