--- a/partial/footer/footer.html
+++ b/partial/footer/footer.html
@@ -10,26 +10,26 @@
         </div>
 
         <section class="widget col-sm-3 text-2 widget_text">
-          <h3 class="widget-title">Footer section</h3>
+          <h3 class="widget-title">Kontakt</h3>
 
           <div class="textwidget">
-            <a href="#">Link</a>
+            <a href="mailto:hej@instagrannar.se">hej@instagrannar.se</a>
           </div>
         </section>
 
         <section class="widget col-sm-3 text-2 widget_text">
-          <h3 class="widget-title">Footer section</h3>
+          <h3 class="widget-title">&nbsp;</h3>
 
           <div class="textwidget">
-            <a href="#">Link</a>
+            <a href="#">Annonsering</a>
           </div>
         </section>
 
         <section class="widget col-sm-3 text-2 widget_text">
-          <h3 class="widget-title">Footer section</h3>
+          <h3 class="widget-title">&nbsp;</h3>
 
           <div class="textwidget">
-            <a href="#">Link</a>
+            <a href="#">Juridisk info</a>
           </div>
         </section>
 
