--- a/partial/footer/footer.html
+++ b/partial/footer/footer.html
@@ -21,7 +21,7 @@
           <h3 class="widget-title">&nbsp;</h3>
 
           <div class="textwidget">
-            <a href="#">Annonsering</a>
+            <a href="/#/annonsering">Annonsering</a>
           </div>
         </section>
 
@@ -29,7 +29,7 @@
           <h3 class="widget-title">&nbsp;</h3>
 
           <div class="textwidget">
-            <a href="#">Juridisk info</a>
+            <a href="/#/legal">Juridisk info</a>
           </div>
         </section>
 
