Added legal page.

--- a/css/app.less
+++ b/css/app.less
@@ -69,4 +69,5 @@
 @import "../partial/sideBar/sideBar.less";
 @import "../partial/photoView/photoView.less";
 @import "../partial/annonsering/annonsering.less";
+@import "../partial/legal/legal.less";
 /* Add Partial LESS Above */
