Added content to legal and advertising page.

--- a/partial/annonsering/annonsering.html
+++ b/partial/annonsering/annonsering.html
@@ -4,7 +4,9 @@
 
   <blockquote>
     <h1>Annonsering</h1>
-    <p>Text...</p>
+    <p>Hej!</p>
+    <p>Vad kul att du vill annonsera på Instagrannar. Just nu när vi håller på att lansera siten ber vi dig att maila oss för att få veta mer om hur du kan annonsera här.</p>
+    <p>Du når oss på <a href="mailto:hej@instagrannar.se">hej@instagrannar.se</a></p>
   </blockquote>
   
   <div ng-controller="FooterCtrl" ng-include src="'partial/footer/footer.html'"></div>
