--- a/partial/legal/legal.html
+++ b/partial/legal/legal.html
@@ -4,7 +4,22 @@
 
   <blockquote>
     <h1>Juridisk info</h1>
-    <p>Text...</p>
+    <p>
+      Frånsägande av ansvar för garantier; Ansvarsbegränsning. Genom åtkomst till denna webbplats samtycker du till användning av den på egen risk. Webbplatsen kan innehålla tekniska fel eller felstavningar. Instagrannar garanterar inte riktighet av informationen eller framställningarna som uppträder på webbplatsen.
+    </p>
+
+    <p>
+      Denna webbplats tillhandahålls av Instagrannar enligt principerna ”I nuvarande skick” och ”i befintligt utförande”. Instagrannar gör inga framställningar eller garantier av något slag, uttryckligen eller antydda, beträffande drift av webbplatsen, informationen, innehållet, materialet eller produkterna som inkluderas på denna webbplats. I den utsträckning som tillåts av tillämplig lag frånsäger sig Instagrannar alla garantier, uttryckta eller antydda, utan begränsning inklusive antydda garantier för säljbarhet, lämplighet för särskilt syfte samt icke-intrång. Instagrannar kommer inte att vara ansvarig för skador av något slag som uppkommer till följd av användning av webbplatsen inklusive, utan begränsning, direkta, indirekta, oförutsedda, bestraffande som följskador. Inga muntliga råd eller skriven information som ges av Instagrannar kommer att skapa en garanti. Du ska inte heller förlita dig till liknande information eller råd.
+    </p>
+
+    <p>
+      Det kan finnas länkar på webbplatsen som låter dig lämna webbplatsen och besöka andra webbplatser. Följaktligen är inte och kan inte Instagrannar hållas ansvarig för innehåll, tjänster, bilder, grafik, produkter eller framställningar på länkade webbplatser. Instagrannar garanterar inte och har inte möjlighet att garantera, representera eller rättfärdiga att innehållet på dessa länkade webbplatser är korrekt, lagligt, ej stötande eller att dessa webbplatser inte innehåller virus eller på annat sätt kan komma att skada din dator. Instagrannar tillhandahåller länkar till dessa webbplatser endast som en tjänst för dig. Instagrannar inkluderande av specifika länkar antyder inte att Instagrannar sponsrar, är anslutna till eller godkänner den länkade webbplatsen.
+    </p>
+
+    <p>
+      Det kan finnas innehåll på webbplatsen som hämtas och/eller har sitt ursprung från andra webbplatser. Instagrannar tar ej något ansvar för detta ånnehåll, varken tjänster, bilder, grafik, produkter eller andra framställningar. Instagrannar garanterar inte och har inte möjlighet att garantera, representera eller rättfärdiga att innehållet som hämtas och/eller har sitt ursprung från andra webbplatser är korrekt, lagligt, ej stötande eller att detta innehåll inte innehåller virus eller på andra sätt kan komma att skada din dator. Instagrannar tillhandahåller innehåll som hämtas och/eller har sitt ursprung från andra webbplatser, men detta antyder ej att Instagrannar sponsrar eller är sponsrade av dessa andra webbplatser.
+    </p>
+
   </blockquote>
   
   <div ng-controller="FooterCtrl" ng-include src="'partial/footer/footer.html'"></div>
