Added header partial without the map part, put it to use in annonsering and legal page.

--- a/css/app.less
+++ b/css/app.less
@@ -70,4 +70,5 @@
 @import "../partial/photoView/photoView.less";
 @import "../partial/annonsering/annonsering.less";
 @import "../partial/legal/legal.less";
+@import "../partial/header/header.less";
 /* Add Partial LESS Above */
