--- a/partial/annonsering/annonsering.html
+++ b/partial/annonsering/annonsering.html
@@ -1,6 +1,6 @@
 <div ng-controller="AnnonseringCtrl">
 
-  <div ng-controller="MapCtrl" ng-include src="'partial/map/map.html'"></div>
+  <div ng-controller="HeaderCtrl" ng-include src="'partial/header/header.html'"></div>
 
   <blockquote>
     <h1>Annonsering</h1>
