--- a/partial/header/header.html
+++ b/partial/header/header.html
@@ -6,7 +6,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="site-title">
-            <a class="brand" href="/">Instagrannar</a>
+            <a class="brand" href="http://www.instagrannar.se/">Instagrannar</a>
           </div>
         </div>
       </div>
