--- a/partial/map/map.html
+++ b/partial/map/map.html
@@ -5,7 +5,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="site-title"><a class="brand" href="/">Instagrannar</a></div>
+          <div class="site-title">
+            <a class="brand" href="http://www.instagrannar.se/">Instagrannar</a>
+          </div>
         </div>
       </div>
     </div>
