--- a/partial/footer/footer.less
+++ b/partial/footer/footer.less
@@ -8,12 +8,12 @@ div[ng-controller="FooterCtrl"] {
     width: 100%;
     height: 50px;
 
-    border-top: 1px #000000 solid;
-
     p {
       margin-left: 50px;
     }
 
   }
+
+  border-top: 1px #a9a9a9 solid;
 
 }
