When on the photoView page - clicking the search button will display the grid again so that search results are displayed.

--- a/partial/photoView/photoView.html
+++ b/partial/photoView/photoView.html
@@ -3,7 +3,7 @@
 		<a data-ng-click="close()">Tillbaka</a>
 	</h1>
 	<h3>
-    Postad av <a target="_blank" href="http://instagram.com/{{instagram.user.username}}">@{{instagram.user.username}}</a> about {{t(instagram.created_time)}}
+    Postad av <a target="_blank" href="http://instagram.com/{{instagram.user.username}}">@{{instagram.user.username}}</a>  {{t(instagram.created_time)}}
   </h3>
   <div>
     <a target="_blank" href="{{instagram.link}}">
