--- a/css/app.less
+++ b/css/app.less
@@ -1,4 +1,5 @@
 @import "http://fonts.googleapis.com/css?family=Roboto:400,700";
+@import url(http://fonts.googleapis.com/css?family=Indie+Flower);
 
   // Core variables and mixins
 @import "../bower_components/bootstrap/less/variables.less";
