--- a/partial/header/header.less
+++ b/partial/header/header.less
@@ -1,3 +1,7 @@
+div[ng-controller="HeaderCtrl"] {
+  font-family: 'Indie Flower', cursive;
+}
+
 .banner div.container {
   width: 100%;
   border-bottom: 1px #9a9a9a solid;
