--- a/partial/map/map.html
+++ b/partial/map/map.html
@@ -13,12 +13,12 @@
     </div>
 
     <google-map center="map.center" draggable="true" zoom="map.zoom" options="map.options" events="map.events">
-      <script type="text/ng-template" id="control.tpl.html">
+      <!--<script type="text/ng-template" id="control.tpl.html">
         <span class="picture-loader">
           <button data-ng-click="load(map.zoom)" ng-disabled="buttonDisabled">{{localizedContent.read('getPictures')}}</button>
         </span>
-      </script>
-      <map-control template='control.tpl.html' position="bottom-center" controller="PictureLoaderCtrl"></map-control>
+      </script>-->
+      <!--<map-control template='control.tpl.html' position="bottom-center" controller="PictureLoaderCtrl"></map-control>-->
       <circle center="map.center" radius="zoom.radius(viewport.zoomLevel)" visible="true" stroke="map.circleStroke"> </circle>
     </google-map>
 
