--- a/partial/photoView/photoView.html
+++ b/partial/photoView/photoView.html
@@ -11,7 +11,10 @@
             Postad av <a target="_blank" href="http://instagram.com/{{instagram.user.username}}">@{{instagram.user.username}}</a>  {{t(instagram.created_time)}}
           </h3>
           <div>
-            <a target="_blank" href="{{instagram.link}}">
+            <a href="{{instagram.link}}" data-ng-show="instagram.id === 'ad'">
+              <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}" width="640" height="640"/>
+            </a>
+            <a target="_blank" href="{{instagram.link}}" data-ng-hide="instagram.id === 'ad'">
               <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}" width="640" height="640"/>
             </a>
           </div>
