--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -6,8 +6,16 @@
       
       <main class="main" role="main">
 
-        <google-places location=location></google-places>
+        <blockquote data-ng-hide="hasAuthToken">
+          <p>
+            <strong>
+              <a href="{{oauthUrl}}">För bättre prestanda kan du logga in med ditt Instagram-konto här</a>
+            </strong>
+          </p>
+        </blockquote>
 
+        <google-places location=location></google-places>
+        
         <blockquote data-ng-hide="!!grams.data || error">
           <p>
             {{localizedContent.read('introParagraph')}}
