Minor changes to oauth hack.

--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -9,7 +9,7 @@
         <blockquote data-ng-hide="hasAuthToken">
           <p>
             <strong>
-              <a href="{{oauthUrl}}">För bättre prestanda kan du logga in med ditt Instagram-konto här</a>
+              <a style="color: red;" href="{{oauthUrl}}">För bättre prestanda kan du logga in med ditt Instagram-konto här</a>
             </strong>
           </p>
         </blockquote>
