--- a/partial/photoView/photoView.html
+++ b/partial/photoView/photoView.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="content">
       
-      <main class="main" role="main">
+      <main class="main photo-view" role="main">
 
         <div>
           <h3>
