Added a login modal. Minor refactoring here and there.

--- a/css/app.less
+++ b/css/app.less
@@ -59,6 +59,7 @@
 /* Directive LESS */
 @import "../directive/photo/photo.less";
 @import "../directive/googlePlaces/googlePlaces.less";
+@import "../directive/loginModal/loginModal.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
