--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -1,5 +1,7 @@
+<login-modal></login-modal>
+
 <div ng-controller="MapCtrl" ng-include src="'partial/map/map.html'"></div>
-    
+
 <div class="wrap" role="document">
   <div class="container">
     <div class="content">
