Updated angular-google-maps version

--- a/partial/map/map.html
+++ b/partial/map/map.html
@@ -19,7 +19,7 @@
         </span>
       </script>-->
       <!--<map-control template='control.tpl.html' position="bottom-center" controller="PictureLoaderCtrl"></map-control>-->
-      <!--<circle center="map.center" radius="zoom.radius(viewport.zoomLevel)" visible="true" stroke="map.circleStroke"> </circle>-->
+      <circle center="map.center" radius="zoom.radius(viewport.zoomLevel)" visible="true" stroke="map.circleStroke"> </circle>
     </google-map>
 
   </header>
