Added suggestedLocations service. Added locationSuggestion directive. Implemented a feature that sits next to the search field and allows the user to quickly navigate to a location and zoom level to view a suggested location.

--- a/css/app.less
+++ b/css/app.less
@@ -60,6 +60,7 @@
 @import "../directive/photo/photo.less";
 @import "../directive/googlePlaces/googlePlaces.less";
 @import "../directive/loginModal/loginModal.less";
+@import "../directive/locationSuggestion/locationSuggestion.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
