--- a/directive/googlePlaces/googlePlaces.less
+++ b/directive/googlePlaces/googlePlaces.less
@@ -8,6 +8,12 @@ div#google_places_search {
     padding: 4px;
   }
 
+  @media (min-width: 500px) {
+    input {
+      width: 100%;
+    }
+  }
+
   margin-bottom: 10px;
 
 }
