--- a/partial/photoGrid/photoGrid.html
+++ b/partial/photoGrid/photoGrid.html
@@ -9,7 +9,8 @@
       <main class="main" role="main">
 
         <google-places location=location></google-places>
-        
+        <location-suggestion></location-suggestion>
+
         <blockquote data-ng-hide="!!grams.data || error">
           <p>
             {{localizedContent.read('introParagraph')}}
