HTML5 video tag for video posts.

--- a/css/app.less
+++ b/css/app.less
@@ -61,6 +61,7 @@
 @import "../directive/googlePlaces/googlePlaces.less";
 @import "../directive/loginModal/loginModal.less";
 @import "../directive/locationSuggestion/locationSuggestion.less";
+@import "../directive/instagramVideo/instagramVideo.less";
 /* Add Directive LESS Above */
 
 /* Partial LESS */
