--- a/partial/photoView/photoView.html
+++ b/partial/photoView/photoView.html
@@ -10,7 +10,10 @@
           <h3>
             Postad av <a target="_blank" href="http://instagram.com/{{instagram.user.username}}">@{{instagram.user.username}}</a>  {{t(instagram.created_time)}}
           </h3>
-          <div class="instag-image">
+          <instagram-video data-ng-if="instagram.type === 'video'" url="instagram.videos.standard_resolution.url">
+          </instagram-video>
+          
+          <div class="instag-image" data-ng-if="instagram.type !== 'video'">
             <a href="{{instagram.link}}" data-ng-show="instagram.id === 'ad'">
               <img data-ng-src="{{instagram.images.standard_resolution.url}}" alt="{{instagram.caption.text}}" width="640" height="640"/>
             </a>
