Added faint border for images and videos. Set video height and width explicitly.

--- a/partial/photoView/photoView.less
+++ b/partial/photoView/photoView.less
@@ -4,6 +4,10 @@
 
 div.instag-image {
 
+  img, video {
+    border: 1px #efefef solid;
+  }
+  
   @media (max-width: 670px) {
     img {
       width: 100%;
